bonus sort of working

--- a/D3_data_journalism/index.html
+++ b/D3_data_journalism/index.html
@@ -28,7 +28,7 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Poverty and Healthcare</h2>
-          <p>There appares to be a slight trend that the higher percentage of a state being 
+          <p>This chart shows a slight trend that the higher percentage of a state being 
             in poverty correlates to a higher percentage lacking healthcare.</p>
 
           
